--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "react-tap-event-plugin": "^3.0.2",
     "react-toastify": "^2.1.6",
+    "react-transition-group": "^2.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
