--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
+    "react-sound": "^0.10.0",
     "react-tap-event-plugin": "^3.0.2",
     "react-toastify": "^2.1.6",
     "react-transition-group": "^2.2.1",
