--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-icons": "^2.2.7",
+    "react-native": "^0.50.4",
+    "react-native-sound": "^0.10.4",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
@@ -57,9 +59,11 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "socket.io-client": "^2.0.4",
+    "soundmanager2": "^2.97.20170602",
     "style-loader": "^0.18.2",
     "sw-precache-webpack-plugin": "^0.11.4",
     "url-loader": "^0.5.9",
+    "web-audio-player": "^1.3.2",
     "webpack": "^3.5.1",
     "webpack-dev-server": "^2.8.2",
     "webpack-manifest-plugin": "^1.2.1",
