--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss-loader": "^2.0.6",
     "promise": "^8.0.1",
     "promise-polyfill": "^6.0.2",
+    "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-addons-update": "^15.6.2",
     "react-autosuggest": "^9.3.2",
