--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
     "keycode": "^2.1.9",
+    "loaders.css": "^0.1.2",
     "lodash": "^4.17.4",
     "material-ui": "^1.0.0-beta.19",
     "material-ui-icons": "^1.0.0-beta.17",
@@ -47,6 +48,8 @@
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-icons": "^2.2.7",
+    "react-loaders": "^3.0.1",
+    "react-motion": "^0.5.2",
     "react-native": "^0.50.4",
     "react-native-sound": "^0.10.4",
     "react-redux": "^5.0.6",
